# DigiDuckBook

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
DigiDuckBook/: __init__.py  abc_book.py  calc_date.py  main_bot.py
DigiDuckBook/abc_class/: abc_book.py  abstract.py
DigiDuckBook/contacts/: address_book.py  contacts_handlers.py
DigiDuckBook/draw/: ab.dot  note.dot  uml.drawio
DigiDuckBook/exchange_rates/: nbu.py
DigiDuckBook/goose_game/: game.py
DigiDuckBook/note_book/: notes_handlers.py  notes_oop.py
DigiDuckBook/sort_folder/: sort_module.py
package/: main_bot.py  tool_kit.py
package/contacts/: address_book.py  contacts_handlers.py
package/goose_game/: game.py
package/note_book/: data_note.json  notes_handlers.py  notes_oop.py
package/sort_folder/: sort_module.py
package/utils/: cls_clear.py  data_json.py  tool_kit.py
